Firefox fix for login page / authStrategies alignment

--- a/meshcentral-web/public/styles/components/LoginPage.css
+++ b/meshcentral-web/public/styles/components/LoginPage.css
@@ -224,7 +224,7 @@
   border: none !important;
 }
 
-#body.arg_hide.login #authStrategies {
+#body.arg_hide.login #authStrategies a {
     display: ruby;
 }
 
